--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
                 android:singleLine="true"
                 android:lines="1"
                 android:textColor="@color/white_color"
-                android:textColorHint="@color/lighr_gray"
+                android:textColorHint="@color/light_gray_3"
                 app:addTextChangedListener = "@{loginviewmodel.IdTextWacher()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
                 android:inputType="textPassword|textNoSuggestions|textMultiLine"
                 android:padding="10dp"
                 android:textColor="@color/white_color"
-                android:textColorHint="@color/lighr_gray"
+                android:textColorHint="@color/light_gray_3"
                 app:addTextChangedListener="@{loginviewmodel.passTextWacher()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
