--- a/src/main/res/drawable/click_button2.xml
+++ b/src/main/res/drawable/click_button2.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_pressed="true">
-            <color android:color="@color/lighr_gray"/>
+            <color android:color="@color/light_gray_3"/>
     </item>
 
     <item android:state_pressed="false">
