--- a/src/main/res/layout/activity_musicplayer.xml
+++ b/src/main/res/layout/activity_musicplayer.xml
@@ -41,20 +41,24 @@
                 android:gravity="center"
                 android:textSize="6pt"
                 android:textStyle="bold"
-                android:textColor="@color/lighr_gray"
+                android:textColor="@color/light_gray_3"
                 android:singleLine="true"
                 android:ellipsize="marquee"/>
         </LinearLayout>
 
-        <ImageView
+        <LinearLayout
             android:id="@+id/down_activity"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="10">
+            <ImageView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/downarrow"
             android:layout_gravity="center"
-            android:layout_weight="10"
+            android:layout_marginRight="5pt"
             android:scaleType="matrix"
-            android:layout_marginRight="5pt"/>
+            android:src="@drawable/downarrow" />
+        </LinearLayout>
 
     </LinearLayout>
     <LinearLayout
@@ -150,15 +154,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="3pt">
+                android:padding="3pt"
+                android:layout_gravity="center">
+
                 <SeekBar
                     android:id="@+id/player_seekbar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:thumb="@drawable/seekbar_thumb"
+                    android:progressDrawable="@drawable/custom_seekbar_2" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="7pt"
+                    android:layout_marginRight="7pt">
 
                     <TextView
                         android:id="@+id/tv_state_playtime"
@@ -167,7 +177,7 @@
                         android:text="00:00"
                         android:textSize="5pt"
                         android:textStyle="bold"
-                        android:textColor="@color/main_color"
+                        android:textColor="@color/greenlight"
                         android:layout_alignParentLeft="true"/>
 
                     <TextView
@@ -177,7 +187,7 @@
                         android:text="00:00"
                         android:textStyle="bold"
                         android:textSize="5pt"
-                        android:textColor="@color/lighr_gray"
+                        android:textColor="@color/light_gray_3"
                         android:layout_alignParentRight="true"/>
 
                 </RelativeLayout>
@@ -221,7 +231,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/btn_pause"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:visibility="gone"/>
 
 
             <ImageView
