--- a/src/main/res/layout/activity_splash.xml
+++ b/src/main/res/layout/activity_splash.xml
@@ -1,10 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/holo_blue_bright"
+    android:gravity="center">
 
+    <LinearLayout
+        android:layout_width="70pt"
+        android:layout_height="70pt"
+        android:gravity="center"
+        android:background="@drawable/layout_round_border"
+        android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/app_logo"
+        android:scaleType="fitXY"
+        android:layout_gravity="center"
+        android:layout_marginBottom="7pt"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon"
+        android:scaleType="fitXY"/>
+
+    </LinearLayout>
+
+</LinearLayout>
