--- a/src/main/res/layout/dialog_finduserinfo.xml
+++ b/src/main/res/layout/dialog_finduserinfo.xml
@@ -28,7 +28,7 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/lighr_gray"
+        android:background="@color/light_gray_3"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintVertical_bias="0.1" />
@@ -74,7 +74,7 @@
         <View
             android:layout_width="2dp"
             android:layout_height="match_parent"
-            android:background="@color/lighr_gray" />
+            android:background="@color/light_gray_3" />
 
         <LinearLayout
             android:layout_width="match_parent"
