--- a/src/main/res/layout/fragment_home.xml
+++ b/src/main/res/layout/fragment_home.xml
@@ -37,9 +37,11 @@
             android:textSize="10pt"
             android:textColor="@color/black_color"/>
 
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+            <TextView
+                android:id="@+id/tv_networkstate"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text = "네트워크 상태"
                 android:layout_weight="1"/>
 
             <LinearLayout
