--- a/src/main/res/layout/fragment_search.xml
+++ b/src/main/res/layout/fragment_search.xml
@@ -49,7 +49,7 @@
         android:layout_marginLeft="5pt"
         android:layout_marginTop="2pt"
         android:layout_marginBottom="2pt"
-        android:background="@color/lighr_gray"/>
+        android:background="@color/light_gray_3"/>
 
     <GridLayout
         android:layout_width="match_parent"
